--- a/src/talks.html
+++ b/src/talks.html
@@ -7,6 +7,6 @@ list-category: talks
 permalink: /talks/
 title: "Software Engineer + Web Developer"
 image: ayo.png
-description: "Ayo Ayco has contributed software development expertise to UPLB, DOST, Infor, and various government-funded projects such as University of the Philippines’ National Operational Assessment of Hazards and Ateneo’s Cloud-Based Intelligent Total Analysis System."
+description: "Ayo Ayco is a Software Engineer from The Philippines, now in The Netherlands! He has contributed software development expertise to UPLB, DOST, Infor, and various government-funded projects such as University of the Philippines’ National Operational Assessment of Hazards and Ateneo’s Cloud-Based Intelligent Total Analysis System."
 ---
 
